# Kweebec-Manager

./: .gitignore  LICENSE  README.md  _kweebec-manager_logs.txt  instruction.md
HOOKS/: Mistral_Design.md
HOOKS/child_process/: ANALYSE_PROCESSUS_SERVEUR.md  GUIDE_IMPLEMENTATION_REACT_RUST.md  RECAP_PROCESSUS_ENFANT.md
HOOKS/hytale/: HYTALE_DOC_SERVER.md  HYTALE_HIERARCHIE.md
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  templates.rs
backend/src/api/: auth.rs  backups.rs  console.rs  filesystem.rs  mod.rs  servers.rs  settings.rs  setup.rs  system.rs  upload.rs  users.rs  webhook.rs
backend/src/api/servers/: handlers.rs  models.rs
backend/src/models/: server.rs  user.rs
backend/src/services/: backup_service.rs  discord_service.rs  mod.rs  process_manager.rs  scheduler.rs
backend/src/utils/: memory.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: Checkbox.tsx  DirectoryPicker.tsx  Input.tsx  InstallationProgress.tsx  Layout.tsx  RangeSlider.tsx  Select.tsx  ServerCard.tsx  ServerFilters.tsx  ServerList.tsx  Sidebar.tsx  Table.tsx  Tabs.tsx  Tooltip.tsx  WorkInProgress.tsx
frontend/src/components/server/: ServerBackups.tsx  ServerConfig.tsx  ServerConsole.tsx  ServerFiles.tsx  ServerLogs.tsx  ServerPlayers.tsx
frontend/src/constants/: theme.ts
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx  PageTitleContext.tsx  ThemeContext.tsx
frontend/src/hooks/: index.ts  useAsync.ts  useBackups.ts  useConsole.ts  useServers.ts  useSettings.ts
frontend/src/i18n/: en.ts  fr.ts
frontend/src/pages/: Backups.tsx  CreateServer.tsx  Dashboard.tsx  EditServer.tsx  EditUser.tsx  Login.tsx  PanelSettings.tsx  ServerDetail.tsx  Servers.tsx  Setup.tsx  UserSettings.tsx  Users.tsx
frontend/src/services/: api.ts  index.ts
frontend/src/styles/: _base.scss  _mixins.scss  _variables.scss  main.scss
frontend/src/styles/components/: _badge.scss  _button.scss  _card.scss  _console.scss  _directory-picker.scss  _form.scss  _installation-progress.scss  _layout.scss  _range.scss  _select.scss  _server-list.scss  _sidebar.scss  _table.scss  _tabs.scss  _topbar.scss
frontend/src/styles/pages/: _create-server.scss  _dashboard.scss  _edit-user.scss  _login.scss  _server-detail.scss  _servers.scss  _settings.scss  _setup.scss  _user-settings.scss  _users.scss
frontend/src/utils/: formatters.ts  gameConfig.ts  logUtils.ts
install/linux/: Dockerfile  docker-compose.yml  install.sh
install/windows/: install.ps1
