[package]
name = "kweebec-manager"
version = "0.1.0"
edition = "2021"
authors = ["Maxim <contact@kweebec.dev>"]
description = "A modern game server manager"
license = "MIT"
repository = "https://github.com/thefrcrazy/kweebec-manager"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-files = "0.6"
actix-ws = "0.3"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1.0"

# HTTP client (for Discord webhooks, downloads)
reqwest = { version = "0.12", features = ["json"] }

# Compression/Archive
tar = "0.4"
flate2 = "1.0"

# System info
sysinfo = "0.33"
lazy_static = "1.5"
walkdir = "2.5.0"

[dev-dependencies]
actix-rt = "2"

[[bin]]
name = "kweebec"
path = "src/main.rs"
