[package]
name = "draveur-manager"
version = "0.1.0"
edition = "2021"
authors = ["Maxim <contact@draveur.dev>"]
description = "A modern game server manager"
license = "MIT"
repository = "https://github.com/thefrcrazy/draveur-manager"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit", "catch-panic"] }
mime = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1.0"

# HTTP client (for Discord webhooks, downloads)
reqwest = { version = "0.12", features = ["json"] }

# Compression/Archive
tar = "0.4"
flate2 = "1.0"

# System info
sysinfo = "0.33"
lazy_static = "1.5"
walkdir = "2.5.0"
regex = "1.12.2"



[[bin]]
name = "draveur"
path = "src/main.rs"
